# girlfriend_csv_vulContract

./: Cargo.toml  README.md  foundry.toml
assets/: template.hbs  token_slot_cache.json  tx_hash_id_until_2023-08-Zunami.csv
db/: db
eth_back_test_debug1_BlockStatus/: summary.txt
eth_back_test_debug2_deletecall/: summary.txt
eth_back_test_debug3_balanceForReceiver/: summary.txt
eth_back_test_debug4_noViaIr/: summary.txt
eth_back_test_debug5_haveViaIr/: summary.txt
eth_back_test_debug6_muchMoreConfig/: summary.txt
eth_back_test_original/: summary.txt
src/: call.rs  config.rs  contract.rs  girlfriend.rs  http.rs  lib.rs  slot_cache.rs  utils.rs
test_cache/: Contract_functions.json  Sub_contracts.json  Sub_contracts_after_valuesMut.json  args.json  before_test1_parsed_root_calls.json  debug_contract_map.json  debug_parsed_calls.json  debug_pc.json  debug_root_call.json  debug_root_calls.json  debug_struct_defs_after_organize.json  debug_test3_calls  debug_traces_0x04e16a79.json  debug_tx_trace_0x04e16a79.json  debug_txs_0x04e16a79.json  first_state.json  initiaize_contract_map.json  last_state.json  mainTx_contract_map.json  mainTx_contract_map_1_after_organize.json  mainTx_contract_map_3_after_valuesMut.json  mainTx_contract_map_4_after_generate.json  mainTx_root_call.json  mainTx_struct_defs_after_organize.json  main_tx_pc.json  root_fn_sigs.json  test1_calls_all.json  test1_calls_last.json  test1_calls_mid.json  test2_calls_all.json  test2_calls_last.json  test2_calls_mid.json  x04e1.t.sol
test_cache1/: x2aec.t.sol  x2b02.t.sol  x2e7d.t.sol
(+507 files in other folders)
