[package]
name = "girlfriend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.6"
alloy-dyn-abi = { version = "0.6", features = ["arbitrary", "eip712"] }
alloy-json-abi = "0.6"
# 新增一行
arbitrary = { version = "1", features = ["derive"] }
# 新增一行
once_cell = "1"

handlebars = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sled = "0.34"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
regex = "1.10"
rayon = "1.8"
rand = "0.8"
lazy_static = "1.4"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
csv = "1.4.0"

[dev-dependencies]
tempfile = "3.6"
